# Grapheme-to-Phoneme-Converter

./: .gitignore  CMakeLists.txt  README.md  espeak-ng.pc.in
.github/: copilot-instructions.md
cmake/: config.cmake  data.cmake  deps.cmake  docs.cmake
src/: CMakeLists.txt  espeak-ng.c
src/include/espeak-ng/: espeak_ng.h  speak_lib.h
src/libespeak-ng/: CMakeLists.txt  common.c  common.h  compiledict.c  config.h.in  encoding.c  intonation.c  langopts.c  mbrola.h  phoneme.c  phoneme.h  phonemelist.c  readclause.c  setlengths.c  soundicon.h  speech.c  ssml.c  stubs.h  synthdata.c  synthdata.h  synthesize.c  synthesize.h  tr_languages.c  translate.c  translate.h  translateword.c  voice.h  voices.c  wavegen.h
